--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -2,6 +2,7 @@ typeDefinition=Data type definition
 types=Types
 type=Type
 properties=Properties
+embedded=embedded
 searchable=Searchable
 contained=Contained
 add=Add
