status bar instead of popups

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -22,3 +22,17 @@ entity=Entity
 
 yes=Yes
 no=No
+
+stateReady=Ready
+stateQueued=Queued
+stateRunning=Running
+stateCompleted=Completed
+stateFailed=Failed
+
+taskOpenDB=Open database
+taskCloseDB=Close database
+taskSearch=Search
+taskSwitchSearchType=Switch search type
+taskLoad=Load entity
+taskSave=Save
+taskDelete=Delete
