input min sizes; view tasklist window on progressbar klick

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -28,7 +28,8 @@ stateQueued=Queued
 stateRunning=Running
 stateCompleted=Completed
 stateFailed=Failed
-
+tasksQueued=Queued tasks
+tasksFailed=Errors
 taskOpenDB=Open database
 taskCloseDB=Close database
 taskSearch=Search
