--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -28,8 +28,6 @@ stateQueued=Queued
 stateRunning=Running
 stateCompleted=Completed
 stateFailed=Failed
-tasksQueued=Queued tasks
-tasksFailed=Errors
 taskOpenDB=Open database
 taskCloseDB=Close database
 taskSearch=Search
@@ -37,3 +35,6 @@ taskSwitchSearchType=Switch search type
 taskLoad=Load entity
 taskSave=Save
 taskDelete=Delete
+taskDetails=Task details
+tasksQueued=Queued tasks
+tasksFailed=Errors
