containments can be saved with UI feedback due to FXTransactionTask as subtask of a transaction within a task

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -35,6 +35,7 @@ taskSwitchSearchType=Switch search type
 taskLoad=Load entity
 taskSave=Save
 taskDelete=Delete
+taskCloseTransientContainmentEditors=Close transient containment editors
 taskDetails=Task details
 tasksQueued=Queued tasks
 tasksFailed=Errors
