task list display order fixed

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -21,6 +21,8 @@ all=All
 newEntity=New
 results=Results
 entity=Entity
+updateDatabaseSchema=Update database index
+rebuildSearchIndex=Rebuild search index
 
 yes=Yes
 no=No
@@ -28,6 +30,7 @@ no=No
 stateReady=Ready
 stateQueued=Queued
 stateRunning=Running
+stateCanceled=Canceled
 stateCompleted=Completed
 stateFailed=Failed
 taskOpenDB=Open database
