using json to persist schema; schema update fixed; icons added

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -1,3 +1,4 @@
+ok=OK
 close=close
 unknown=Unknown
 typeDefinition=Data type definition
@@ -35,6 +36,7 @@ stateRunning=Running
 stateCanceled=Canceled
 stateCompleted=Completed
 stateFailed=Failed
+taskCreateDB=Create database
 taskOpenDB=Open database
 taskCloseDB=Close database
 taskSearch=Search
