close unsaved confirm dialog

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -17,6 +17,7 @@ create=Create
 edit=Edit
 choose=choose
 
+confirmCloseUnsaved=Do you want to close without saving your data?
 open=Open
 configure=Configure
 search=Search ...
