icons added; create database button removed

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -17,6 +17,7 @@ create=Create
 edit=Edit
 choose=choose
 
+confirmDatabaseCreation=either does not exist or is empty. \nDo you want to create a new database inside this directory?
 confirmCloseUnsaved=Do you want to close without saving your data?
 open=Open
 configure=Configure
@@ -37,7 +38,6 @@ stateRunning=Running
 stateCanceled=Canceled
 stateCompleted=Completed
 stateFailed=Failed
-taskCreateDB=Create database
 taskOpenDB=Open database
 taskCloseDB=Close database
 taskSearch=Search
