saving platform independent file pathes

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -1,3 +1,4 @@
+initializing=Initializing ...
 ok=OK
 close=close
 unknown=Unknown
@@ -15,12 +16,14 @@ delete=Delete
 remove=Remove
 create=Create
 edit=Edit
-choose=choose
+chooseFile=Choose file
+chooseDirectory=Choose directory
 
 confirmDatabaseCreation=either does not exist or is empty. \nDo you want to create a new database inside this directory?
 confirmCloseUnsaved=Do you want to close without saving your data?
+confirmDelete=Do you want to delete this entry?
 open=Open
-configure=Configure
+settings=Settings
 search=Search ...
 all=All
 newEntity=New
