allowed nested root directories; platform-independent pathes; can select only files that are in root directory; splash screen with longer duration and border

--- a/src/main/resources/bundles/jdoe_en.properties
+++ b/src/main/resources/bundles/jdoe_en.properties
@@ -41,6 +41,7 @@ stateRunning=Running
 stateCanceled=Canceled
 stateCompleted=Completed
 stateFailed=Failed
+taskRestoreLastAppState=Restore last application state
 taskOpenDB=Open database
 taskCloseDB=Close database
 taskSearch=Search
